Fixes POST from preventing the addition of new researches
